<resources>
    <string name="app_name">玩清单</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="wan_android">Wan Android</string>
    <string name="ing">进行中</string>
    <string name="finished">已完成</string>
    <string name="use_one">只用这一个</string>
    <string name="work">工作</string>
    <string name="learn">学习</string>
    <string name="life">生活</string>
    <string name="please_input_content">请输入内容</string>
    <string name="add_detail_content">添加详情内容</string>
    <string name="confirm">确定</string>
    <string name="please_input_todo">请输入Todo</string>
    <string name="detail_content">详情内容</string>
    <string name="success_delete">删除成功</string>
    <string name="confirm_delete">确认删除</string>
    <string name="cancel">取消</string>
    <string name="success_login">登录成功</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="success_add">添加成功</string>
    <string name="please_check_network">请检查网络</string>
    <string name="link_out_time">连接超时</string>
    <string name="example_eat">例如，吃饭</string>
    <string name="loading">加载中…</string>
    <string name="about">关于</string>
    <string name="used_libraries">项目中使用的 Library</string>
    <string name="give_friend_download"><![CDATA[< 分享给身边的好友扫描下载 >]]></string>
    <string name="app_info">一个非常简洁清爽的清单工具，\n帮您轻松记录个人计划。\n\n
        本App的特色就是简洁，\n在交互上让人体会到视觉上的舒适感。 \n\n
        固定的4种清单分类在顶部可直接切换列表。 \n\n

        项目主要框架结构：\n
        MVP+okhttp3+retrofit+gson \n

        \n\n 开源地址：\n https://github.com/xujiaji/Todo

        \n\n API由WanAndroid提供：\n http://www.wanandroid.com
    </string>
    <string name="opean_source_libraries">开源Libraries</string>
    <string name="please_choose_category">请选择一个分类！不选默认第一个分类哦</string>
    <string name="urgent_important">既紧急又重要</string>
    <string name="important_not_urgent">重要但不紧急</string>
    <string name="urgent_not_important">紧急但不重要</string>
    <string name="not_urgent_not_important">不紧急不重要</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="success_edit">修改成功</string>
</resources>
