<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    android:scrollingCache="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/ripple_theme"
            android:scaleType="center"
            android:tint="@color/textColorPrimary"
            app:srcCompat="@drawable/ic_back"
            android:onClick="onClickAboutBack"/>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Version"
            android:textColor="@color/textColorSecondary" />

        <Button
            android:id="@+id/btnLookLibraries"
            style="@style/Base.Widget.AppCompat.ActionButton.CloseMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableRight="@drawable/ic_arrow_right"
            android:text="@string/used_libraries"
            android:textColor="@color/colorAccent"
            android:onClick="onClickLicense"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="32dp"
            android:autoLink="all"
            android:lineSpacingExtra="4dp"
            android:text="@string/app_info"
            android:textColor="@color/textColorPrimary" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/give_friend_download"
            android:textColor="@color/textColorPrimary"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgRQ"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:scaleType="fitXY" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
